[gd_scene load_steps=16 format=2]

[ext_resource path="res://AST/Weapons/Laser/Sprites/Orb.png" type="Texture" id=1]
[ext_resource path="res://AST/Weapons/Laser/Sprites/Beam.png" type="Texture" id=2]
[ext_resource path="res://AST/Weapons/Laser/Laser.gd" type="Script" id=3]
[ext_resource path="res://AST/Weapons/Laser/Audio/laser.wav" type="AudioStream" id=5]
[ext_resource path="res://AST/Weapons/Laser/Audio/orb.wav" type="AudioStream" id=6]
[ext_resource path="res://AST/Weapons/Laser/Sprites/Flicker.gd" type="Script" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 6 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6, 6 )

[node name="Laser" type="Node2D"]
script = ExtResource( 3 )

[node name="Audio" type="Node2D" parent="."]
visible = false

[node name="Orb" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 6 )
attenuation = 0.0371627

[node name="Laser" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 5 )
attenuation = 0.00480916

[node name="Beam" type="Sprite" parent="."]
visible = false
material = SubResource( 1 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 48, -6 )
region_enabled = true
region_rect = Rect2( 0, 0, 0, 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Orb" type="Sprite" parent="."]
visible = false
centered = false
offset = Vector2( 0, -12 )
region_enabled = true
region_rect = Rect2( 0, 0, 100, 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="OrbSprite" type="Sprite" parent="Orb"]
light_mask = 8
material = SubResource( 2 )
position = Vector2( 42, 0 )
texture = ExtResource( 1 )

[node name="OrbArea" type="Area2D" parent="Orb"]
position = Vector2( 48.1063, 0.0455017 )
collision_layer = 32
collision_mask = 32

[node name="OrbCol" type="CollisionShape2D" parent="Orb/OrbArea"]
position = Vector2( -6.1063, 0 )
shape = SubResource( 3 )
disabled = true

[node name="EndOrb" type="Sprite" parent="."]
visible = false

[node name="EndOrbSprite" type="Sprite" parent="EndOrb"]
material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="EndOrbPart" type="Particles2D" parent="EndOrb/EndOrbSprite"]
material = SubResource( 5 )
lifetime = 0.25
preprocess = 0.25
process_material = SubResource( 8 )
texture = ExtResource( 1 )

[node name="EndOrbArea" type="Area2D" parent="EndOrb"]
position = Vector2( 100.015, 0.0124722 )
collision_layer = 32
collision_mask = 32

[node name="EndOrbCol" type="CollisionShape2D" parent="EndOrb/EndOrbArea"]
position = Vector2( 0, -0.0455017 )
shape = SubResource( 9 )
disabled = true

[node name="EndPoint" type="Position2D" parent="."]
visible = false
position = Vector2( 100, 0 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="Color" type="Timer" parent="."]
script = ExtResource( 7 )
[connection signal="timeout" from="Color" to="Color" method="_on_Color_timeout"]
